# libreoffice-rs

./: .gitignore  Cargo.toml  Makefile  README.md  bindings.rs  build.rs  wrapper.h
.github/workflows/: rust.yml
src/: bindings.rs  error.rs  lib.rs  urls.rs  wrapper.c  wrapper.h
src/wrapper/: bindings.rs  mod.rs
test_data/: test.odt  test_password.odt
tests/: test_password_callback.rs
