[package]
name = "libreoffice-rs"
version = "0.1.2"
edition = "2021"
description = "Rust binding for LibreOfficeKit"
keywords = ["LibreOfficeKit", "lok", "ffi"]
authors = ["Sean Pan <orin.kakhan@gmail.com>"]
repository = "https://github.com/undeflife/libreoffice-rs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]


[build-dependencies]
bindgen = "0.59"


[features]
default = []
unstable = []