[package]
name = "libreoffice-rs"
version = "0.3.3"
edition = "2021"
description = "Rust binding for LibreOfficeKit"
keywords = ["LibreOfficeKit", "lok", "ffi"]
authors = ["Sean Pan <orin.kakhan@gmail.com>"]
repository = "https://github.com/undeflife/libreoffice-rs"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
url = "2.2.2"

[build-dependencies]
bindgen = "0.63"


[features]
default = []
unstable = []
